Fix dark mode issues

--- a/src/ui/style.scss
+++ b/src/ui/style.scss
@@ -17,6 +17,21 @@
     --color-rejected--light: #E76866;
 }
 
+@media (prefers-color-scheme: dark) {
+    :root {
+        --mdc-theme-primary: #68478d;
+        --mdc-theme-background: #121212;
+        --mdc-theme-surface: #1e1e1e;
+        --mdc-theme-on-surface: #FFF;
+        --mdc-theme-text-primary-on-light: #FFF;
+        --mdc-theme-text-disabled-on-light: rgba(255, 255, 255, 0.5);
+    }
+
+    body {
+        color: #FFF !important;
+    }
+}
+
 .status-pending  { color: var(--color-pending ) !important; }
 .status-accepted { color: var(--color-accepted) !important; }
 .status-rejected { color: var(--color-rejected) !important; }
